@startuml
title サークルを作成
package Controller {
  class CircleController {}
}

package ApplicationService {
  package Circle {
    class CircleCreateService {
      - circleRepository: CircleRepository
      - circleService: CircleService
      - circleFactory: CircleFactory
      - userRepository: UserRepository
      + Handle(cmd CircleCreateCommand) error
    }
  }
  package Command {
    package CircleCommand {
      class CircleCreateCommand {
        - circleName: string
        - userID: string
        + CircleName() string
        + UserID() string
      }
    }
  }
}

package Domain {
  package Model {
    package Circles {
      class Circle {
        - circleID: CircleID
        - circleName: CircleName
        - owner: User
        - member: User[]
      }
      class CircleName {
        - value
        + String() string
        + Equal(other CircleName) bool
      }
      class CircleID {
        - value
        + String() string
      }
      Circle *-- CircleName
      Circle *-- CircleID
      
      class CircleService {
        - circleRepository: CircleRepository
        + Exists(circle Circle) bool
      }
      interface CircleFactory {
        + Create(name CircleName, owner User) (*Circle, error)
      }
      interface CircleRepository {
        + Save(circle Circle) error
        + FindByID(id CircleID) (*Circle, error)
        + FindByName(name CircleName) (*Circle, error)
      }
    }
    package Users {
      class User {
        - userID: UserID
        - userName: UserName
        + ID() UserID
        + Name() UserName
      }
      interface UserRepository {
        + Save(user User) error
        + FindByID(id UserID) (*User, error)
        + FindByName(name UserName) (*User, error)
      }
    }
  }

  ' package Factory {
  '   package MySQL {
  '     class CircleFactory {
  '       + Create(name CircleName, owner User) (*Circle, error)
  '     }
  '   }
  ' }
}
Circle o--- User
package Infrastructure {
  package Factory {
    package MySQL {
      class MySQLCircleFactory {
        + Create(name CircleName, owner User) (*Circle, error)
      }
    }
  }
  package Repository {
    package MySql {
      class MySQLUserRepository {
        + Save(user User) error
        + FindByID(id UserID) (*User, error)
        + FindByName(name UserName) (*User, error)
      }
      class MySQLCircleRepository {
        + Save(circle Circle) error
        + FindByID(id CircleID) (*Circle, error)
        + FindByName(name CircleName) (*Circle, error)
      }
    }
  }
}
CircleService --> CircleRepository
CircleFactory <|-- MySQLCircleFactory
CircleCreateService --> CircleRepository
CircleCreateService --> CircleFactory
CircleCreateService --> CircleService
CircleRepository <|-- MySQLCircleRepository
UserRepository <|-- MySQLUserRepository
UserRepository <-- CircleCreateService
CircleController --> CircleCreateService
CircleCreateService -> CircleCreateCommand
CircleController -> CircleCreateCommand
' Circle *-- CircleName
' Circle *-- CircleID
@enduml
